fix button spacing

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -143,4 +143,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   &.social {
     text-align: center;
   }
+  .btn-main {
+    margin: 16px 0 8px;
+  }
 }
